Update to v1.0.2: Add automatic style loading and fix component registration

--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
   "name": "@answerlau/design-system",
-  "version": "1.0.0",
-  "description": "A high quality UI Toolkit built on Vue.js 3.0",
+  "version": "1.0.2",
+  "description": "基于Vue 3的高质量UI组件库，支持按需引入与自动样式加载",
   "main": "dist/design-system.js",
   "module": "dist/design-system.esm.js",
   "types": "types/index.d.ts",
+  "style": "dist/styles/design-system.css",
+  "unpkg": "dist/design-system.min.js",
+  "jsdelivr": "dist/design-system.min.js",
   "files": [
     "dist",
     "src",
-    "types"
+    "types",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "NODE_ENV=production vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue src",
-    "lint:fix": "eslint --ext .js,.vue src --fix"
+    "lint:fix": "eslint --ext .js,.vue src --fix",
+    "prepublishOnly": "npm run build:prod"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AnswerLau/ds.git"
   },
   "keywords": [
-    "design-system",
     "vue3",
     "components",
     "ui",
-    "framework"
+    "design-system",
+    "vue-components",
+    "ui-framework"
   ],
   "author": "AnswerLau",
   "license": "MIT",
@@ -41,10 +49,14 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.2",
-    "terser": "^5.39.0", 
+    "terser": "^5.39.0",
     "vite": "^5.1.6"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
