--- a/.npmignore
+++ b/.npmignore
@@ -1,31 +1,41 @@
-# Source files
-src/
-examples/
-test/
-tests/
-docs/
-
-# Config files
-.babelrc
+# 开发文件
+.DS_Store
+node_modules
+/dist/test
+/examples
+/test
+/docs
+.browserslistrc
 .editorconfig
-.eslintrc.json
-.prettierrc
+.eslintignore
+.eslintrc.js
 .gitignore
 .npmignore
 .travis.yml
-.github/
-vite.config.js
+babel.config.js
 jest.config.js
-
-# Development files
-*.log
-.DS_Store
-.idea/
-.vscode/
-coverage/
-node_modules/
-
-# Build files
-build/
-dist/test/
+postcss.config.js
 *.map
+*.html
+
+# 编辑器目录
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# 日志文件
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# 环境文件
+.env.local
+.env.*.local
+
+# 测试覆盖率
+/coverage
